[package]
name = "sublock"
version = "0.1.0"
authors = ["David Rajchenbach-Teller <dteller@mozilla.com>"]
description = "Variants of RwLock that support sublocks, opened for reading if the main `RwLock` is opened for reading, opened for writing if the main `RwLock` is opened for writing."
documentation = "http://yoric.github.io/sublocks/doc/sublocks/"
repository = "https://github.com/Yoric/sublock"
license = "MPL-2"

[dependencies]
